--- a/server/pom.xml
+++ b/server/pom.xml
@@ -40,6 +40,12 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-websocket</artifactId>
+    <version>3.3.0</version>
+</dependency>
+
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
